--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <img src="IMG/LOGOOFICIAL.png" alt="LOGOOFICIAL" class="logo">
         
             
-                <li><a href="file:///C:/Users/imoa3/Downloads/PROYECTO%20HYN-20240603T213129Z-001/PROYECTO%20HYN/index.html">Inicio</a></li>
-                <li><a href="file:///C:/Users/imoa3/Downloads/PROYECTO%20HYN-20240603T213129Z-001/PROYECTO%20HYN/index2.html">Recetas</a></li>
-                <li><a href="file:///C:/Users/imoa3/Downloads/PROYECTO%20HYN-20240603T213129Z-001/PROYECTO%20HYN/index3.html">Tips</a></li>
-                <li><a href="file:///C:/Users/imoa3/Downloads/PROYECTO%20HYN-20240603T213129Z-001/PROYECTO%20HYN/index4.html">Contacto</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="index2.html">Recetas</a></li>
+                <li><a href="index3.html">Tips</a></li>
+                <li><a href="index4.html">Contacto</a></li>
             </ul>
         </nav> 
     </header>
